--- a/webroot/css/timeline.css
+++ b/webroot/css/timeline.css
@@ -4,6 +4,9 @@
     position: relative;
 }
 
+.timeline-pager {
+    text-align: left;
+}
     .timeline:before {
         top: 0;
         bottom: 0;
