Updated frontend widget and human readable values

--- a/webroot/css/timeline.css
+++ b/webroot/css/timeline.css
@@ -184,3 +184,14 @@
             right: auto;
         }
 }
+
+
+
+.model-history-area .fields .fields-table {
+    margin-top: 30px;
+    background-color: transparent;
+}
+
+.model-history-area .fields .fields-table td {
+    width: 50%;
+}
