More compact history area view, ajax pagination

--- a/webroot/css/timeline.css
+++ b/webroot/css/timeline.css
@@ -185,10 +185,8 @@
         }
 }
 
-
-
 .model-history-area .fields .fields-table {
-    margin-top: 30px;
+    margin: 10px 0 0 0;
     background-color: transparent;
 }
 
